If source element has an id, use this as the id of the search or combo text input Fixed display glitch whereby the selected text was sometimes getting covered up by an element that should have been hidden. Now takes any ID set on the original element and applies it to the combo or search input element. Pop-up was not showing if the entire component was positioned absolutely. Added a positionAbsolute setting, which should be set to true to fix that situation.

--- a/acute/acute.select/acute.select.css
+++ b/acute/acute.select/acute.select.css
@@ -14,7 +14,6 @@
     padding-left:2px;
     margin-right: -2px;
     height: 21px;
-    overflow: hidden;
     border: 1px solid #c0c0c0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -49,7 +48,7 @@
 }
 
 .ac-select-widener td {
-    /*visibility: hidden;*/
+    visibility: hidden;
     padding: 0px;
 }
 
@@ -69,17 +68,15 @@ td.ac-select-image {
 }
 
 div.ac-select-popup {
-    position: absolute;
     top: 22px;
     border-left: 1px solid #c0c0c0;
     border-right: 1px solid #c0c0c0;
     border-bottom: 1px solid #c0c0c0;
-    z-index: 99;
+    z-index: 5000;
     background-color: white;
     padding-top: 2px;
-    /*padding-left:2px;*/
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 div.ac-select-list {
